infrastructure/base/networking/http-redirect-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http-redirect
  namespace: spezistudyplatform
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: HostRegexp(`.+`)
      priority: 1
      middlewares:
        - name: redirect-https
      services:
        - name: spezistudyplatform-web-service
          port: 80
